Moved publications to the top

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             Email: thomaseh [at] umich [dot] edu <br>
             [<a href="https://www.linkedin.com/in/thomaseh/" target="_blank">LinkedIn</a>]
             [<a href="https://github.com/thomasehuang" target="_blank">GitHub</a>]
-            [<a href="static/resume.pdf" target="_blank">resume</a>]
+            [<a href="static/resume.pdf" target="_blank">CV</a>]
         </div>
     </div>
     <!-- <hr> -->
@@ -62,11 +62,28 @@
     </div>
 
     <div>
-        <button id="exp_but" onclick="dispButton('exp');">Experience</button>
         <button id="pub_but" onclick="dispButton('pub');">Publications</button>
+        <button id="exp_but" onclick="dispButton('exp');">Experience</button>
         <button id="tae_but" onclick="dispButton('tae');">Teaching & Education</button>
         <button id="proj_but" onclick="dispButton('proj');">Projects</button>
         <button id="misc_but" onclick="dispButton('misc');">Misc</button>
+    </div>
+
+    <div id='pub'>
+        <h2 id="title">Publications</h2>
+        <div class="card">
+            <heading>Learning Hierarchical Semantic Image Manipulation through Structured Representations</heading>
+            <div>
+                Seunghoon Hong, Xinchen Yan, <b>Thomas Huang</b>, Honglak Lee
+            </div>
+            <div>
+                To appear in <i>Advances in Neural Information Processing Systems (NIPS)</i>, Montreal, Canada, 2018
+            </div>
+            <div>
+                [<a href="https://arxiv.org/abs/1808.07535" target="_blank">arxiv</a>][code]
+            </div>
+        </div>
+        <!-- <hr> -->
     </div>
 
     <div id='res_exp'>
@@ -104,23 +121,6 @@
             <br>
             <div>
                 I worked with a team to pioneer the integration of a third-party software with Salesforce’s Platform using Python and Javascript. I presented the product to C-level executives of a corporate client.
-            </div>
-        </div>
-        <!-- <hr> -->
-    </div>
-
-    <div id='pub'>
-        <h2 id="title">Publications</h2>
-        <div class="card">
-            <heading>Learning Hierarchical Semantic Image Manipulation through Structured Representations</heading>
-            <div>
-                Seunghoon Hong, Xinchen Yan, <b>Thomas Huang</b>, Honglak Lee
-            </div>
-            <div>
-                To appear in <i>Advances in Neural Information Processing Systems (NIPS)</i>, Montreal, Canada, 2018
-            </div>
-            <div>
-                [<a href="https://arxiv.org/abs/1808.07535" target="_blank">arxiv</a>][code]
             </div>
         </div>
         <!-- <hr> -->
