Added conferences and pictures.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <div>
         <div id="pic_div">
             <img src="static/me.png" alt="Me" id="pic">
+            <i id="pic_desc">@Tokyo, Japan</i>
         </div>
         <div id="info">
             <h1>Thomas Huang</h1>
@@ -50,7 +51,7 @@
     </div>
     <!-- <hr> -->
 
-    <div id='about'>
+    <div id="about">
         <h2 id="title">About Me</h2>
         <div class="norm">
             Hello! My name is Thomas Huang. I am currently a senior undergraduate student studying Computer Science and Data Science at the <a href="https://www.eecs.umich.edu/" target="_blank">EECS department @ University of Michigan</a>. 
@@ -77,7 +78,7 @@
                 Seunghoon Hong, Xinchen Yan, <b>Thomas Huang</b>, Honglak Lee
             </div>
             <div>
-                To appear in <i>Advances in Neural Information Processing Systems (NIPS)</i>, Montreal, Canada, 2018
+                To appear in <i>Advances in Neural Information Processing Systems (NeurIPS)</i>, Montreal, Canada, 2018
             </div>
             <div>
                 [<a href="https://arxiv.org/abs/1808.07535" target="_blank">arxiv</a>][code]
@@ -95,7 +96,7 @@
             </div>
             <br>
             <div>
-                I am researching the application of deep learning to generative tasks, including image and music generation. Work done under <a href="http://web.eecs.umich.edu/~honglak/" target="_blank">Professor Honglak Lee</a>. Work partially done under the <a href="https://sure.engin.umich.edu/" target="_blank">SURE program</a>.
+                I am researching the application of deep learning to generation tasks, including image and music generation. Work done under <a href="http://web.eecs.umich.edu/~honglak/" target="_blank">Professor Honglak Lee</a>. Work partially done under the <a href="https://sure.engin.umich.edu/" target="_blank">SURE program</a>.
             </div>
         </div>
         <div class="card">
@@ -193,6 +194,27 @@
             <br>
             <div>
                 Our team designs and builds an autonomous, robotic boat every year to compete in the <a href="https://www.auvsifoundation.org/competition/roboboat">International RoboBoat Competition</a>, which is composed of several challenges. Our team also composes a research journal paper/technical design report each year, which can be found here (<a href="static/uma_2016.pdf" target="_blank">2016</a>, <a href="static/uma_2017.pdf" target="_blank">2017</a>). For two years, I was the lead of the AI subteam, which is in charge of the software and algorithms used by the boat. I supervised various tasks, such as data collection, object detection, and control systems.
+            </div>
+        </div>
+        <div class="card">
+            <heading>Eta Kappa Nu, EECS Honor Society</heading> – University of Michigan
+            <div>
+                Member <span class="date">Sep, 2016 – Current</span>
+            </div>
+        </div>
+        <!-- <hr> -->
+    </div>
+
+    <div id='conf'>
+        <h2 id="title">Conferences</h2>
+        <div class="card">
+            <heading>NeurIPS 2018</heading> – Montreal, Canada
+            <div>
+                Poster Session<span class="date">Dec 3, 2018 – Dec 8, 2018</span>
+            </div>
+            <br>
+            <div>
+                I presented our paper, <i>Learning Hierarchical Semantic Image Manipulation through Structured Representations</i>, at the poster session (<a href="neurips2018.html">pictures</a>).
             </div>
         </div>
         <!-- <hr> -->
