Added google scholar

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             [<a href="https://www.linkedin.com/in/thomaseh/" target="_blank">LinkedIn</a>]
             [<a href="https://github.com/thomasehuang" target="_blank">GitHub</a>]
             [<a href="static/resume.pdf" target="_blank">CV</a>]
+            [<a href="https://scholar.google.com/citations?user=7wuq-7AAAAAJ&hl=en" target="_blank">Google Scholar</a>]
         </div>
     </div>
     <!-- <hr> -->
