--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					<br>
 					[<a href="https://www.linkedin.com/in/thomaseh/" target="_blank">LinkedIn</a>]
 		            [<a href="https://github.com/thomasehuang" target="_blank">GitHub</a>]
-		            [<a href="static/cv.pdf" target="_blank">CV</a>]
+		            [<a href="static/cv.pdf" target="_blank">CV</a>]<br>
 		            [<a href="https://scholar.google.com/citations?user=7wuq-7AAAAAJ&hl=en" target="_blank">Google Scholar</a>]
 				</span>
 			</div>
@@ -79,6 +79,7 @@
 						<!-- <li><a href="#" data-nav-section="services">Services</a></li> -->
 						<!-- <li><a href="#" data-nav-section="skills">Skills</a></li> -->
 						<li><a href="#" data-nav-section="publications">Publications</a></li>
+						<li><a href="#" data-nav-section="awards">Honors and Awards</a></li>
 						<li><a href="#" data-nav-section="education">Education</a></li>
 						<li><a href="#" data-nav-section="experience">Experience</a></li>
 						<li><a href="#" data-nav-section="teaching">Teaching</a></li>
@@ -114,8 +115,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<div class="col-md-12">
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
-										<p>Hello! My name is <strong>Thomas Huang</strong>. I am currently a senior undergraduate student studying Computer Science and Data Science at the <a href="https://www.eecs.umich.edu/" target="_blank">EECS department @ University of Michigan</a>.</p>
-										<p>I am planning on pursuing a PhD degree in Machine Learning/Artificial Intelligence after obtaining my undergraduate degree. My research interests are deep learning and its applications to various fields, specifically computer vision, generative models, natural language processing, and reinforcement learning.</p>
+										<p>Hello! My name is <strong>Thomas Huang</strong>. I recently graduated from the <a href="https://umich.edu/" target="_blank">University of Michigan</a> and obtained degrees in Computer Science and Data Science at the <a href="https://www.eecs.umich.edu/" target="_blank">EECS department</a>.
+
+										<p>Starting this fall, I will be joining Professor <a href="http://web.eecs.umich.edu/~honglak/" target="_blank">Honglak Lee</a>'s lab as a PhD student. My research interests are deep learning and its applications to various fields, specifically computer vision, generative models, natural language processing, and reinforcement learning.</p>
 									</div>
 								</div>
 							</div>
@@ -170,6 +172,26 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				</div>
 			</section>
 
+			<section class="colorlib-awards" data-section="awards">
+				<div class="colorlib-narrow-content">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
+								<div class="col-md-12">
+									<div class="awards-desc">
+										<span class="heading-meta">Honors and Awards</span>
+										<h2 class="colorlib-heading animate-box">Honors and Awards</h2>
+										<ul>
+									        <li><b>NSF Graduate Research Fellowship Honorable Mention</b>, 2018</li>
+									    </ul>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
 			<section class="colorlib-education" data-section="education">
 				<div class="colorlib-narrow-content">
 					<div class="row">
@@ -200,32 +222,16 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 										      				Sep. 2015 – May 2019
 										      			</p>
 											            <p>
-											            	Cumulative GPA: 3.98, Major GPA: 4.0 <br>
-											                Relevant coursework: Machine Learning, Reinforcement Learning, Computer Vision, Artificial Intelligence (A+), Natural Language Processing (A+), Data Mining (A+), Algorithmic Robotics, Web Systems (A+), Operating Systems.<br><br>
-											                Honors and Awards: <a href="https://studentawards.engin.umich.edu/deanslist/" target="_blank">Dean's Honor List</a> (Fall '15, Winter & Fall '16, Fall '17, Winter '18), <a href="http://honors.umich.edu/awards.php" target="_blank">University Honors</a> (Winter '16, Fall '17, Winter '18), <a href="http://honors.umich.edu/awards.php" target="_blank">James B. Angell Scholar</a> ('18)
+											            	Graduated with highest distinction (Summa Cum Laude)<br>
+											            	Cumulative GPA: 3.99, Major GPA: 4.0<br>
+											                Relevant coursework: Machine Learning, Deep Learning, Reinforcement Learning, Computer Vision, Artificial Intelligence (A+), Natural Language Processing (A+), Data Mining (A+), Algorithmic Robotics, Web Systems (A+), Operating Systems.<br><br>
+											                Honors and Awards: <a href="https://studentawards.engin.umich.edu/deanslist/" target="_blank">Dean's Honor List</a> (Fall '15, Winter & Fall '16, Fall '17, Winter '18), <a href="http://honors.umich.edu/awards.php" target="_blank">University Honors</a> (Winter '16, Fall '17, Winter '18), <a href="http://honors.umich.edu/awards.php" target="_blank">James B. Angell Scholar</a> ('18, '19)
 											            </p>
 										      		</div>
 										      	</div>
 									         </div>
 									    </div>
 									</div>
-									<!-- <div class="panel panel-default">
-									    <div class="panel-heading" role="tab" id="headingTwo">
-									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Bachelor Degree of Computer Science
-									            </a>
-									        </h4>
-									    </div>
-									    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-									        <div class="panel-body">
-									            <p>Far far away, behind the word <strong>mountains</strong>, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-													<ul>
-														<li>Separated they live in Bookmarksgrove right</li>
-														<li>Separated they live in Bookmarksgrove right</li>
-													</ul>
-									        </div>
-									    </div>
-									</div> -->
 								</div>
 							</div>
 						</div>
@@ -395,6 +401,25 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					                  <h2>
 					                  	EECS 445: Introduction to Machine Learning
 					                  	<br>
+					                  	<span>Head Instructional Aide</span>
+					                  	<br>
+					                  	<span>Jan. 2019 - May. 2019</span>
+					                  </h2>
+					               </div>
+					            </div>
+					         </article>
+
+				         	<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+					            <div class="timeline-entry-inner">
+
+					               <div class="timeline-icon color-3">
+					                  <i class="icon-pen2"></i>
+					               </div>
+
+					               <div class="timeline-label">
+					                  <h2>
+					                  	EECS 445: Introduction to Machine Learning
+					                  	<br>
 					                  	<span>Instructional Aide</span>
 					                  	<br>
 					                  	<span>Sep. 2018 - Dec. 2018</span>
@@ -434,13 +459,13 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				</div>
 			</section>
 
-			<section class="colorlib-about" data-section="projects">
+			<section class="colorlib-project" data-section="projects">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-12">
 							<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="col-md-12">
-									<div class="about-desc">
+									<div class="project-desc">
 										<span class="heading-meta">Projects</span>
 										<h2 class="colorlib-heading animate-box">Projects</h2>
 									</div>
