Changed pic to low res version

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- <h2>Contact Info and Links</h2> -->
     <div>
         <div id="pic_div">
-            <img src="static/me.png" alt="Me" id="pic">
+            <img src="static/me_lowres.png" alt="Me" id="pic">
             <i id="pic_desc">@Tokyo, Japan</i>
         </div>
         <div id="info">
