Moved dates and removed details on front

--- a/index.html
+++ b/index.html
@@ -98,22 +98,22 @@
     <div id='res_exp'>
         <h2 id="title">Research Experience</h2>
         <div class="card">
-            <heading>AI Lab</heading> – University of Michigan
+            <heading>AI Lab</heading> – University of Michigan <span class="date">April, 2018 – current</span>
             <div>
-                Research Assistant <span class="date">April, 2018 – current</span>
+                Research Assistant
             </div>
-            <br>
-            <div class="card_body">
+            <div class="card_body card_main">
+                <br>
                 I am researching the application of deep learning to generation tasks, including image and music generation. Work done under <a href="http://web.eecs.umich.edu/~honglak/" target="_blank">Professor Honglak Lee</a>. Work partially done under the <a href="https://sure.engin.umich.edu/" target="_blank">SURE program</a>.
             </div>
         </div>
         <div class="card">
-            <heading>ARM Lab</heading> – University of Michigan
+            <heading>ARM Lab</heading> – University of Michigan <span class="date">Jan – April, 2018</span>
             <div>
-                Research Assistant <span class="date">Jan – April, 2018</span>
+                Research Assistant
             </div>
-            <br>
-            <div class="card_body">
+            <div class="card_body card_main">
+                <br>
                 I researched the use of deep learning models for 3D shape completion from a single depth view, which has important applications in robotics. Work done under <a href="http://web.eecs.umich.edu/~dmitryb/" target="_blank">Professor Dmitry Berenson</a> at the <a href="http://arm.eecs.umich.edu/" target="_blank">Autonomous Robotic Manipulation</a> (ARM) Lab.
             </div>
         </div>
@@ -123,12 +123,12 @@
     <div id='teach'>
         <h2 id="title">Teaching</h2>
         <div class="card">
-            <heading>EECS 445: Introduction to Machine Learning</heading> – University of Michigan
+            <heading>EECS 445: Intro. to Machine Learning</heading> – University of Michigan <span class="date">Jan, 2018 – Apr, 2019</span>
             <div>
-                Instructional Aide (2 semesters), Head Instructional Aide (1 semester) <span class="date">Jan, 2018 – Apr, 2019</span>
+                Instructional Aide (2 semesters), Head Instructional Aide (1 semester)
             </div>
-            <br>
-            <div class="card_body">
+            <div class="card_body card_main">
+                <br>
                 I taught fundamental machine learning concepts, including linear classifiers, support vector machines, decision trees, bagging and boosting, neural networks, deep learning, clustering, collaborative filtering, and graphical models.
             </div>
         </div>
@@ -138,12 +138,12 @@
     <div id='ed'>
         <h2 id="title">Education</h2>
         <div class="card">
-            <heading>University of Michigan</heading> – Ann Arbor, Michigan
+            <heading>University of Michigan</heading> – Ann Arbor, Michigan <span class="date">Sep, 2015 – Apr, 2019</span>
             <div>
-                Computer Science, Bachelor of Engineering <span class="date">Sep, 2015 – Apr, 2019</span>
+                Computer Science, Bachelor of Engineering
             </div>
-            <br>
-            <div class="card_body">
+            <div class="card_body card_main">
+                <br>
                 Cumulative GPA: 3.99, Major GPA: 4.0 <br>
                 Relevant coursework: Machine Learning, Reinforcement Learning, Computer Vision, Artificial Intelligence, Natural Language Processing, Data Mining, Algorithmic Robotics, Web Systems, Operating Systems.<br><br>
                 Honors and Awards: <a href="https://studentawards.engin.umich.edu/deanslist/" target="_blank">Dean's Honor List</a> (Fall '15, Winter & Fall '16, Fall '17, Winter '18), <a href="http://honors.umich.edu/awards.php" target="_blank">University Honors</a> (Winter '16, Fall '17, Winter '18), <a href="http://honors.umich.edu/awards.php" target="_blank">James B. Angell Scholar</a> ('18)
@@ -169,9 +169,9 @@
     <div id='proj'>
         <h2 id="title">Projects</h2>
         <div class="card">
-            <heading>ICLR 2018 Reproducibility Challenge</heading>
+            <heading>ICLR 2018 Reproducibility Challenge</heading> <span class="date">Sep – Dec, 2017</span>
             <div>
-                Final Project for EECS 498: Reinforcement Learning at the University of Michigan <span class="date">Sep – Dec, 2017</span>
+                Final Project for EECS 498: Reinforcement Learning at the University of Michigan
             </div>
             <br>
             <div class="card_body">
@@ -179,9 +179,9 @@
             </div>
         </div>
         <div class="card">
-            <heading>Front-end Collision Prevention System</heading>
+            <heading>Front-end Collision Prevention System</heading> <span class="date">Sep – Dec, 2017</span>
             <div>
-                Final Project for EECS 442: Computer Vision at the University of Michigan <span class="date">Sep – Dec, 2017</span>
+                Final Project for EECS 442: Computer Vision at the University of Michigan
             </div>
             <br>
             <div class="card_body">
@@ -194,9 +194,9 @@
     <div id='prof_exp'>
         <h2 id="title">Professional Experience</h2>
         <div class="card">
-            <heading>Salesforce</heading> – San Francisco, California
+            <heading>Salesforce</heading> – San Francisco, California <span class="date">May – August, 2017</span>
             <div>
-                Frontier Scale Software Engineering Intern <span class="date">May – August, 2017</span>
+                Frontier Scale Software Engineering Intern
             </div>
             <br>
             <div class="card_body">
@@ -209,9 +209,9 @@
     <div id='xtra'>
         <h2 id="title">Extracurriculars</h2>
         <div class="card">
-            <heading>UM::Autonomy</heading> – University of Michigan
+            <heading>UM::Autonomy</heading> – University of Michigan <span class="date">Sep, 2015 – Sep, 2018</span>
             <div>
-                Lead for the AI subteam (2016 – 2018) <span class="date">Sep, 2015 – Sep, 2018</span>
+                Lead for the AI subteam (2016 – 2018)
             </div>
             <br>
             <div class="card_body">
@@ -219,9 +219,9 @@
             </div>
         </div>
         <div class="card">
-            <heading>Eta Kappa Nu, EECS Honor Society</heading> – University of Michigan
+            <heading>Eta Kappa Nu, EECS Honor Society</heading> – University of Michigan <span class="date">Sep, 2016 – Apr, 2019</span>
             <div>
-                Member <span class="date">Sep, 2016 – Apr, 2019</span>
+                Member
             </div>
         </div>
         <hr>
@@ -230,9 +230,9 @@
     <div id='conf'>
         <h2 id="title">Conferences</h2>
         <div class="card">
-            <heading>NeurIPS 2018</heading> – Montreal, Canada
+            <heading>NeurIPS 2018</heading> – Montreal, Canada <span class="date">Dec 3, 2018 – Dec 8, 2018</span>
             <div>
-                Poster Session<span class="date">Dec 3, 2018 – Dec 8, 2018</span>
+                Poster Session
             </div>
             <br>
             <div class="card_body">
