Added helpful tip

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- <hr> -->
 
     <div id="about">
-        <h2 id="title">About Me</h2>
+        <h2 class="title">About Me</h2>
         <div class="norm">
             Hello! My name is <strong>Thomas Huang</strong>. I recently graduated from the <a href="https://umich.edu/" target="_blank">University of Michigan</a> and obtained degrees in Computer Science and Data Science at the <a href="https://www.eecs.umich.edu/" target="_blank">EECS department</a>.
             <br>
@@ -78,8 +78,10 @@
         <button id="misc_but" onclick="dispButton('misc');">Misc</button>
     </div>
 
+    <div id="tab_details">Click on the tabs for more details</div>
+
     <div id='pub'>
-        <h2 id="title">Publications</h2>
+        <h2 class="title" id="pub_title">Publications</h2>
         <div class="card">
             <heading>Learning Hierarchical Semantic Image Manipulation through Structured Representations</heading>
             <div>
@@ -96,7 +98,7 @@
     </div>
 
     <div id='res_exp'>
-        <h2 id="title">Research Experience</h2>
+        <h2 class="title">Research Experience</h2>
         <div class="card">
             <heading>AI Lab</heading> – University of Michigan <span class="date">April, 2018 – current</span>
             <div>
@@ -121,7 +123,7 @@
     </div>
 
     <div id='teach'>
-        <h2 id="title">Teaching</h2>
+        <h2 class="title">Teaching</h2>
         <div class="card">
             <heading>EECS 445: Intro. to Machine Learning</heading> – University of Michigan <span class="date">Jan, 2018 – Apr, 2019</span>
             <div>
@@ -136,7 +138,7 @@
     </div>
 
     <div id='ed'>
-        <h2 id="title">Education</h2>
+        <h2 class="title">Education</h2>
         <div class="card">
             <heading>University of Michigan</heading> – Ann Arbor, Michigan <span class="date">Sep, 2015 – Apr, 2019</span>
             <div>
@@ -153,7 +155,7 @@
     </div>
 
     <div id='award'>
-        <h2 id="title">Honors and Awards</h2>
+        <h2 class="title">Honors and Awards</h2>
         <div class="card">
             <div>
                 <ul id='award_list'>
@@ -167,7 +169,7 @@
     <!-- Below are not shown by default -->
 
     <div id='proj'>
-        <h2 id="title">Projects</h2>
+        <h2 class="title">Projects</h2>
         <div class="card">
             <heading>ICLR 2018 Reproducibility Challenge</heading> <span class="date">Sep – Dec, 2017</span>
             <div>
@@ -192,7 +194,7 @@
     </div>
 
     <div id='prof_exp'>
-        <h2 id="title">Professional Experience</h2>
+        <h2 class="title">Professional Experience</h2>
         <div class="card">
             <heading>Salesforce</heading> – San Francisco, California <span class="date">May – August, 2017</span>
             <div>
@@ -207,7 +209,7 @@
     </div>
 
     <div id='xtra'>
-        <h2 id="title">Extracurriculars</h2>
+        <h2 class="title">Extracurriculars</h2>
         <div class="card">
             <heading>UM::Autonomy</heading> – University of Michigan <span class="date">Sep, 2015 – Sep, 2018</span>
             <div>
@@ -228,7 +230,7 @@
     </div>
 
     <div id='conf'>
-        <h2 id="title">Conferences</h2>
+        <h2 class="title">Conferences</h2>
         <div class="card">
             <heading>NeurIPS 2018</heading> – Montreal, Canada <span class="date">Dec 3, 2018 – Dec 8, 2018</span>
             <div>
@@ -243,7 +245,7 @@
     </div>
 
     <div id='read'>
-        <h2 id="title">Readings</h2>
+        <h2 class="title">Readings</h2>
         <div class="norm">
             I am keeping a list of papers that I read for research/projects, which can be found <a href="https://github.com/thomasehuang/ML-Paper-Notes">here</a>.
         </div>
